--- a/src/main/webapp/WEB-INF/views/docker-registry/docker-registry.html
+++ b/src/main/webapp/WEB-INF/views/docker-registry/docker-registry.html
@@ -101,6 +101,138 @@
                             </form>
                         </div>
 
+                        <div class="images-layout">
+                            <ul>
+                                <li class="images-panel">
+                                    <div class="select-img">
+                                        <i class="fa fa-star star-style" style="color:#efa421"></i>
+                                        <div class="mir-img ">
+                                            <img src="images/tenxcloud_mysql.png">
+                                        </div>
+                                    </div>
+                                    <div class="select-info">
+                                        <div class="pull-right-text">tenxcloud/ubuntu</div>
+                                        <div>
+                                            <div class="pull-right">
+                                                <a href="" class="btn-pull-deploy btn">部署</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="create-item">
+                                        <a href="">
+                                            <span class="note-text" title="Build from centos,Simple CentOS docker image with SSH access">Build from centos,Simple CentOS docker image with SSH access</span>
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="images-panel">
+                                    <div class="select-img">
+                                        <i class="fa fa-star star-style" style="color:#efa421"></i>
+                                        <div class="mir-img ">
+                                            <img src="images/tenxcloud_mysql.png">
+                                        </div>
+                                    </div>
+                                    <div class="select-info">
+                                        <div class="pull-right-text">tenxcloud/ubuntu</div>
+                                        <div>
+                                            <div class="pull-right">
+                                                <a href="" class="btn-pull-deploy btn">部署</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="create-item">
+                                        <a href="">
+                                            <span class="note-text" title="Build from centos,Simple CentOS docker image with SSH access">Build from centos,Simple CentOS docker image with SSH access</span>
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="images-panel">
+                                    <div class="select-img">
+                                        <i class="fa fa-star star-style" style="color:#efa421"></i>
+                                        <div class="mir-img ">
+                                            <img src="images/tenxcloud_mysql.png">
+                                        </div>
+                                    </div>
+                                    <div class="select-info">
+                                        <div class="pull-right-text">tenxcloud/ubuntu</div>
+                                        <div>
+                                            <div class="pull-right">
+                                                <a href="" class="btn-pull-deploy btn">部署</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="create-item">
+                                        <a href="">
+                                            <span class="note-text" title="Build from centos,Simple CentOS docker image with SSH access">Build from centos,Simple CentOS docker image with SSH access</span>
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="images-panel">
+                                    <div class="select-img">
+                                        <i class="fa fa-star star-style" style="color:#efa421"></i>
+                                        <div class="mir-img ">
+                                            <img src="images/tenxcloud_mysql.png">
+                                        </div>
+                                    </div>
+                                    <div class="select-info">
+                                        <div class="pull-right-text">tenxcloud/ubuntu</div>
+                                        <div>
+                                            <div class="pull-right">
+                                                <a href="" class="btn-pull-deploy btn">部署</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="create-item">
+                                        <a href="">
+                                            <span class="note-text" title="Build from centos,Simple CentOS docker image with SSH access">Build from centos,Simple CentOS docker image with SSH access</span>
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="images-panel">
+                                    <div class="select-img">
+                                        <i class="fa fa-star star-style" style="color:#efa421"></i>
+                                        <div class="mir-img ">
+                                            <img src="images/tenxcloud_mysql.png">
+                                        </div>
+                                    </div>
+                                    <div class="select-info">
+                                        <div class="pull-right-text">tenxcloud/ubuntu</div>
+                                        <div>
+                                            <div class="pull-right">
+                                                <a href="" class="btn-pull-deploy btn">部署</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="create-item">
+                                        <a href="">
+                                            <span class="note-text" title="Build from centos,Simple CentOS docker image with SSH access">Build from centos,Simple CentOS docker image with SSH access</span>
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="images-panel">
+                                    <div class="select-img">
+                                        <i class="fa fa-star star-style" style="color:#efa421"></i>
+                                        <div class="mir-img ">
+                                            <img src="images/tenxcloud_mysql.png">
+                                        </div>
+                                    </div>
+                                    <div class="select-info">
+                                        <div class="pull-right-text">tenxcloud/ubuntu</div>
+                                        <div>
+                                            <div class="pull-right">
+                                                <a href="" class="btn-pull-deploy btn">部署</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="create-item">
+                                        <a href="">
+                                            <span class="note-text" title="Build from centos,Simple CentOS docker image with SSH access">Build from centos,Simple CentOS docker image with SSH access</span>
+                                        </a>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -112,6 +244,8 @@
     <script type="text/javascript" src="js/plugins/jquery-1.11.3.js"></script>
     <script type="text/javascript" src="plugins/bootstrap-3.3.5/dist/js/bootstrap.js" ></script>
     <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="js/mod/docker-registry.js"></script>
+
 
 </body>
 </html>
