--- a/src/main/resources/static/css/core/base.css
+++ b/src/main/resources/static/css/core/base.css
@@ -28,9 +28,48 @@ a:focus{
 
 input[type='text'], input[type='password'] {
     border: 1px solid #ccc;
-    text-indent: 5px;
-    padding: 3px 0px;
+    padding: 3px 5px;
 }
+
+input[type='text']:focus,
+input[type='password']:focus,
+textarea.form-control:focus {
+    border: 1px solid #75A1F0;
+    outline: none;
+    box-shadow: 0 0 10px #75A1F0;
+    -webkit-transition: all 0.218s;
+    -moz-transition: all 0.218s;
+    -o-transition: all 0.218s;
+    -ms-transition: all 0.218s;
+    transition: all 0.218s;
+}
+
+label {
+    font-weight: 400;
+}
+
+.margin {
+    margin: 0px 5px;
+}
+
+.hide {
+    display: none !important;
+}
+
+.span2 {
+    width: 20%;
+    float: left;
+}
+
+.span3 {
+    width: 30%;
+    float: left;
+}
+.span5 {
+    width: 50%;
+    float: left;
+}
+
 
 
 /*.open > .dropdown-toggle,*/
@@ -118,6 +157,26 @@ input[type='text'], input[type='password'] {
     vertical-align: top;
 }
 
+.btn-pull-deploy {
+    padding: 3px 13px;
+    border-radius: 2px;
+    text-indent: 0;
+    min-width: 40px;
+    height: auto;
+    border: 1px solid #4e8fde;
+    transition: all .25s;
+}
+
+.btn-pull-deploy:hover {
+    background: #4e8fde;
+    color: #fff;
+}
+
+.btn-defaulted {
+    background: #EEE;
+    color: #666;
+    vertical-align: top;
+}
 
 
 .table tr {
@@ -204,6 +263,19 @@ i.fa_time {
     margin-right: 5px;
 }
 
+i.fa-btn-stop {
+    width: 18px;
+    height: 18px;
+    display: inline-block;
+    vertical-align: middle;
+    background: url(../../images/fa-btn-stop.png) no-repeat;
+    background-position: 0 0;
+}
+
+i.fa-btn-stop.fail {
+    background-position: 0 -22px;
+}
+
 .toolbox {
     float: left;
 }
@@ -229,4 +301,13 @@ i.fa_time {
 .toolbox > .dropdown > .dropdown-menu {
     margin-top: -1px;
     background: #F5F6F6;
+}
+
+.cloud_download {
+    display: inline-block;
+    background: url(../../images/bj_registry_list.png) no-repeat;
+    background-position: 0 -135px;
+    width: 25px;
+    height: 15px;
+    cursor: pointer;
 }
