--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -4,3 +4,104 @@
     min-width: 230px;
 }
 
+.search-group-inner {
+    width: 170px;
+    font-size: 13px;
+}
+.search .search-img {
+    height: 45px;
+    width: 80%;
+}
+
+.search .btn-send {
+    line-height: 25px;
+    height: 45px;
+    margin-left: -1px;
+    vertical-align: top;
+}
+
+.images-panel {
+    height: 220px;
+    width: 20%;
+    border: 1px solid #E5E5E5;
+    border-radius: 2px;
+    position: relative;
+    float: left;
+    margin: 0 20px 20px;
+}
+
+.images-panel .select-img {
+    display: table;
+    width: 100%;
+    height: 150px;
+    position: relative;
+}
+
+.images-panel .select-img .star-style {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    color: #AAA;
+    font-size: 18px;
+}
+
+.images-panel .select-img .mir-img {
+    width: 100%;
+    height: 75px;
+    text-align: center;
+    position: absolute;
+    top: 37px;
+}
+
+.images-panel .select-img .mir-img img {
+    height: 100%;
+    max-width: 80%;
+}
+
+.images-panel .select-info {
+    width: 90%;
+    margin: 0 auto;
+    line-height: 30px;
+    color: #63615E;
+}
+
+.images-panel .select-info .pull-right-text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.images-panel .create-item {
+    opacity: 0;
+    width: 100%;
+    overflow: hidden;
+    height: 150px;
+    background: rgba(84,84,84,.5);
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transition: all .5s cubic-bezier(0.16,.68,.43,.99);
+    -moz-transition: all .5s cubic-bezier(0.16,.68,.43,.99);
+    -ms-transition: all .5s cubic-bezier(0.16,.68,.43,.99);
+    -o-transition: all .5s cubic-bezier(0.16,.68,.43,.99);
+    transition: all .5s cubic-bezier(0.16,.68,.43,.99);
+}
+
+.images-panel .create-item a {
+    font-size: 16px;
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
+.images-panel .create-item a .note-text {
+    color: #fff;
+    overflow: hidden;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    text-overflow: ellipsis;
+    display: table-cell;
+    vertical-align: middle;
+}
