--- a/src/main/webapp/WEB-INF/views/docker-registry/docker-registry.html
+++ b/src/main/webapp/WEB-INF/views/docker-registry/docker-registry.html
@@ -119,7 +119,7 @@
                                         </div>
                                     </div>
                                     <div class="create-item">
-                                        <a href="">
+                                        <a href="docker-registry-detail.html">
                                             <span class="note-text" title="Build from centos,Simple CentOS docker image with SSH access">Build from centos,Simple CentOS docker image with SSH access</span>
                                         </a>
                                     </div>
