--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -275,6 +275,199 @@
     top: 15px;
 }
 
+.ve_top {
+    line-height: 30px;
+    width: 120px;
+    display: inline-block;
+    letter-spacing: 1px;
+    float: left;
+}
+
+.imageName {
+    line-height: 30px;
+}
+
+.select-versions {
+    display: inline-block;
+    width: 70%;
+    height: 30px;
+    border: 1px solid #ccc;
+    cursor: pointer;
+    line-height: 30px;
+    text-indent: 5px;
+}
+
+.sign {
+    float: right;
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+.modalCrealApp .in_style,
+.modalCrealApp .select-versions {
+    width: 83%;
+}
+
+.dropdown-position {
+    left: 120px;
+    width: 70%;
+    top: 30px;
+    text-indent: 10px;
+    max-height: 130px;
+    overflow-y: auto;
+}
+
+.safeSet .dropdown-menu li {
+    padding: 5px 0px;
+    text-indent: 10px;
+    cursor: pointer;
+}
+
+.set_container {
+    width: 120px;
+    height: 40px;
+    margin-right: 20px;
+    float: left;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.up_style {
+    position: relative;
+    width: 48px;
+    height: 100%;
+    background: #e2e2e4;
+    float: left;
+    text-align: center;
+    border-radius: 2px;
+}
+
+.radius_type {
+    display: block;
+    width: 25px;
+    height: 25px;
+    border: 2px solid #a6a6a6;
+    margin: 0 auto;
+    color: #a6a6a6;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 23px;
+    position: relative;
+    top: 8px;
+}
+
+.modefy_container>.parameter,
+.set_container>.parameter {
+    font-size: 12px;
+    color: #999;
+}
+
+
+.x1>.up_style {
+    background: #2cb663;
+}
+
+.x2>.up_style {
+    background: #e8a61b;
+}
+
+.x3>.up_style {
+    background: #418ac7;
+}
+
+.x4>.up_style {
+    background: #7e71b0;
+}
+
+.param-set {
+    height: 45px;
+}
+
+.number-title {
+    display: inline-block;
+    width: 115px;
+}
+
+.param-set .number {
+    width: 230px;
+    text-indent: 5px;
+    margin-top: 10px;
+    padding: 4px;
+    border: 1px solid #ccc;
+}
+
+.unit {
+     margin-left: -50px;
+}
+
+.update-mi {
+    line-height: 30px;
+}
+
+.ins {
+    width: 80px;
+    display: inline-block;
+    text-align: center;
+}
+
+.hide-set {
+    margin: 0 auto;
+    clear: both;
+    position: relative;
+    min-height: 40px;
+}
+
+.hide-select {
+    margin-right: 20px;
+}
+
+.hide-select>input {
+    padding: 3px 0;
+    text-indent: 10px;
+    width: 230px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+#cratePATH {
+    cursor: pointer;
+}
+
+.enabled {
+    margin-top: 10px;
+    color: #999;
+    clear: both;
+}
+
+.enabled thead {
+    background: #E4EAEC;
+}
+
+#Path tr, .enabled tr {
+    border: 1px solid #eee;
+    text-indent: 5px;
+}
+
+.createPort {
+    background: #e4eaec;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    font-size: 16px;
+    color: #3f8ec3;
+    cursor: pointer;
+}
+
+.createPadding {
+    padding: 20px 60px;
+    position: fixed;
+    bottom: 0;
+    width: 75%!important;
+    background: #fff;
+    height: 80px!important;
+    margin: 0!important;
+}
+
 
 /* detail */
 .detail-succeed {
