--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -272,3 +272,9 @@
     margin-right: 5px;
     text-align: center;
 }
+
+.btn-long-deploy {
+    width: 100%;
+    height: 50px;
+    line-height: 42px;
+}
