修改镜像，添加个人收藏查询

--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -159,6 +159,10 @@
     font-size: 14px;
 }
 
+.mirror-head .type-info .fork:hover {
+	color:#F58A18;
+}
+
 .mirror-head .type-info .downloadNumber {
     margin: 0 10px;
     font-size: 14px;
