登录页面js调整

--- a/src/main/resources/static/css/core/layout.css
+++ b/src/main/resources/static/css/core/layout.css
@@ -21,7 +21,7 @@
 }
 
 .navbar .navbar-info li{
-    margin-right: 10px;
+    /*margin-right: 10px;*/
 }
 
 .navbar-info .dropdown .dropdown-toggle {
