我的镜像添加编辑功能

--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -135,6 +135,7 @@
     float: left;
     height: 100%;
     width: 27%;
+    position: relative;
 }
 
 .mirror-head .type-info span.title {
@@ -145,6 +146,13 @@
     white-space: nowrap;
 }
 
+.mirror-head .type-info #desEdit {
+    position: absolute;
+    right: -60px;
+    top: 0;
+    z-index: 2;
+}
+
 .mirror-head .type-info .list-content {
     height: 80px;
     width: 95%;
@@ -152,6 +160,16 @@
     line-height: 20px;
     font-size: 14px;
     overflow: hidden;
+}
+
+.mirror-head .type-info .list-content #desTextarea {
+    resize: none;
+    width: 100%;
+}
+
+.mirror-head .type-info .list-content #desEditSpan {
+    position: relative;
+    top: -10px;
 }
 
 .mirror-head .type-info .fork {
@@ -281,4 +299,11 @@
     width: 100%;
     height: 50px;
     line-height: 42px;
+}
+
+.editSave-bottom {
+    font-size: 16px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
 }
