--- a/src/main/resources/static/css/core/base.css
+++ b/src/main/resources/static/css/core/base.css
@@ -151,8 +151,8 @@ li.line-h-3 {
 
 .btn-primary:hover,
 .btn-primary.focus {
-    background: #4E8FDE;
-    border-color: #4E8FDE;
+    background: #3981da;
+    border-color: #3981da;
 }
 
 .btn-defaults {
@@ -183,6 +183,18 @@ li.line-h-3 {
     color: #666;
     vertical-align: top;
     border:1px solid #ddd;
+}
+
+.btn-dangered {
+    background: #EF6478;
+    color: #fff;
+    vertical-align: top;
+}
+
+.btn-dangered:hover {
+    background: #ed4d64;
+    color: #fff;
+    vertical-align: top;
 }
 
 .btn-prim {
