--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -744,3 +744,14 @@ i.pushOrg {
 .popWin {
     padding: 30px;
 }
+
+#serviceBody tr:hover{
+    background: #f2f2f2;
+}
+
+#serviceBody .clusterId:hover{
+
+    background: #fbfbfb;
+}
+
+
