--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -177,7 +177,8 @@
     font-size: 14px;
 }
 
-.mirror-head .type-info .fork:hover {
+.mirror-head .type-info .fork:hover,
+.mirror-head .type-info .live {
 	color:#F58A18;
 }
 
